--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="footer">
         <hr>
         <p class="pull-left">Copyright &copy; Yevgeny Skuridin</p>
-        <p class="pull-right muted">Нашли ошибку? Пожалуйста сообщите об этом в <a href="https://github.com/redfield-ru/skurid.in">GitHub</a></p>
+        <p class="pull-right muted">Нашли ошибку? Пожалуйста сообщите об этом в <a href="https://github.com/skuridin/skuridin.github.io/issues">GitHub</a></p>
       </div>
   </div>
   <script src="vendor/angular.min.js"></script>
