--- a/index.html
+++ b/index.html
@@ -5,30 +5,28 @@
   <meta name="keywords" content="">
   <meta name="description" content="">
   <title>Yevgeny Skuridin</title>
-  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
     <div class="navbar navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container">
-          <a data-ng-href="#!/" class="brand">Yevgeny Skuridin</a>
-          <ul class="nav">
-            <li><a data-red-nav data-ng-href="#!/">Главная</a></li>
-            <li><a data-red-nav data-ng-href="#!/cv">Резюме</a></li>
-          </ul>
-        </div>
+      <div class="navbar-header">
+        <a data-ng-href="#!/" class="navbar-brand">Yevgeny Skuridin</a>
       </div>
+      <ul class="nav navbar-nav">
+        <li><a data-red-nav data-ng-href="#!/">Главная</a></li>
+        <li><a data-red-nav data-ng-href="#!/cv">Резюме</a></li>
+      </ul>
     </div>
       <div data-ng-view>Loading...</div>
       <div class="footer">
         <hr>
         <p class="pull-left">Copyright &copy; Yevgeny Skuridin</p>
-        <p class="pull-right muted">Нашли ошибку? Пожалуйста сообщите об этом в <a href="https://github.com/skuridin/skuridin.github.io/issues">GitHub</a></p>
+        <p class="pull-right text-muted">Нашли ошибку? Пожалуйста сообщите об этом в <a href="https://github.com/skuridin/skuridin.github.io/issues">GitHub</a></p>
       </div>
   </div>
-  <script src="vendor/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <script src="js/ng-app.js"></script>
   <script src="js/ng-controllers.js"></script>
   <!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter19444894 = new Ya.Metrika({id:19444894, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/19444894" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
