--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <title>Евгений Скуридин</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
+    <!-- Header -->
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
@@ -27,6 +30,27 @@
         </div>
       </div>
     </div>
+    <!-- /Header -->
+
+    <div class="container">
+      <!-- About me -->
+      <div class="row">
+        <div class="col-md-12 about-me">
+          <h2>Привет, мир!</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 visible-lg visible-md">
+          <img class="img-thumbnail" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash4/p206x206/321381_622336171128229_811682172_n.jpg" alt="Суровый">
+        </div>
+        <div class="col-md-10 about-me">
+          <p>Меня зовут Женя, мне 23 года и я backend-программист, хотя и frontend люблю. Разрабатываю проекты с помощью <strong>PHP</strong>, <strong>MYSQL</strong>, <strong>Yii</strong> и т.д. и т.п. Еще мне очень сильно нравятся Ruby, NODE.JS и MongoDB. В дальнейшем хотел бы перейти на них в качестве основных инструментов разработки.</p>
+          <p>Родился в Узбекистане. Работаю в сфере интернет разработок с 2009 года. Весной 2012 года переехал в Москву, чтобы трудиться над стартапом flatora.ru. Есть желание изучить Ruby, Node.js и MongoDB. Люблю точность, новые технологии, упрощать и автоматизировать.</p>
+        </div>
+      </div>
+      <!-- /About me -->
+    </div>
+
     <script src="//code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   </body>
