--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,6 @@
 
     <script src="//code.jquery.com/jquery.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
