--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,9 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#about-me" title="Обо мне">Обо мне</a></li>
-            <li><a href="#work" title="Опыт работы">Опыт работы</a></li>
-            <li><a href="#" title="Навыки">Навыки</a></li>
-            <li><a href="#" title="Контакты">Контакты</a></li>
+            <li><a href="#experience" title="Опыт работы">Опыт работы</a></li>
+            <li><a href="#skills" title="Навыки">Навыки</a></li>
+            <li><a href="#contacts" title="Контакты">Контакты</a></li>
           </ul>
         </div>
       </div>
@@ -45,12 +45,11 @@
             <p>Родился в Узбекистане. Работаю в сфере интернет разработок с 2009 года. Весной 2012 года переехал в Москву, чтобы трудиться над стартапом flatora.ru. Есть желание изучить Ruby, Node.js и MongoDB. Люблю точность, новые технологии, упрощать и автоматизировать.</p>
           </div>
         </div>
-        <hr>
       </div>
       <!-- /About me -->
 
-      <!-- Work -->
-      <div class="section" id="work">
+      <!-- Experience -->
+      <div class="section" id="experience">
           <h2 class="text-center">Опыт работы</h2>
           <div class="row">
             <div class="col-md-4 col-sm-6">
@@ -78,7 +77,49 @@
             </div>
           </div>
       </div>
-      <!-- /Work -->
+      <!-- /Experience -->
+
+      <!-- Skills -->
+      <div class="section" id="skills">
+        <h2 class="text-center">Навыки</h2>
+        <div class="row">
+          <div class="col-md-4">
+            <h3>Разработка</h3>
+            <p>Разработка сайтов с помощью PHP, MYSQL. Оптимизация, автоматизация, подготовка к нагрузкам, интеграция со сторонними сервисами.</p>
+          </div>
+          <div class="col-md-4">
+            <h3>Управление</h3>
+            <p>Грамотное составление задач, стараюсь не придумывать ничего лишнего и сосредоточиться только на главном. Лучше сделать мало, но качественно.</p>
+          </div>
+          <div class="col-md-4">
+            <h3>Чем владею</h3>
+            <p class="skills">
+              <span class="label label-primary">PHP</span>
+              <span class="label label-primary">MYSQL</span>
+              <span class="label label-success">HTML</span>
+              <span class="label label-success">CSS</span>
+              <span class="label label-primary">Yii</span>
+              <span class="label label-primary">Laravel</span>
+              <span class="label label-warning">Fat-Free</span>
+              <span class="label label-success">JavaScript</span>
+              <span class="label label-info">Composer</span>
+              <span class="label label-success">Git</span>
+              <span class="label label-success">SVN</span>
+              <span class="label label-default">Python</span>
+              <span class="label label-info">Grunt</span>
+              <span class="label label-warning">AngularJS</span>
+              <span class="label label-success">SASS/SCSS</span>
+              <span class="label label-warning">Coffee-script</span>
+              <span class="label label-warning">NodeJs</span>
+              <span class="label label-default">Ruby</span>
+              <span class="label label-default">Ruby On Rails</span>
+              <span class="label label-info">MongoDb</span>
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- /Skills -->
+
     </div>
 
     <script src="//code.jquery.com/jquery.min.js"></script>
