Begin contacts section

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <title>Евгений Скуридин</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body data-spy="scroll" data-target=".navbar-collapse">
@@ -33,6 +34,7 @@
     <!-- /Header -->
 
     <div class="container theme-redfield">
+
       <!-- About me -->
       <div class="section" id="about-me">
         <h2 class="text-center">Привет, мир!</h2>
@@ -52,29 +54,38 @@
       <div class="section" id="experience">
           <h2 class="text-center">Опыт работы</h2>
           <div class="row">
+
             <div class="col-md-4 col-sm-6">
               <h3>Vault Couture <small>2013...</small></h3>
               <p>Пока еще ничего не могу сказать, так как начал работать совсем недавно.</p>
             </div>
+
             <div class="col-md-4 col-sm-6">
               <h3>Flatora <small>2011-2013</small></h3>
               <p>Здесь у меня появился первый опыт интеграции со сторонними проектами. Сначала подключал карты от Yandex, даже ходил на конференции, чтобы успеть задать пару вопросов их разработчикам. Речь идет об использовании данных с карт для организации контента и помощи при его создании. Подключал два сервиса SMS рассылки с совершенно разными API. Плотно познакомился с Git, и должен признаться, мне очень нравится эта система контроля версий. Участвовал не только в разработке, но и в вопросах оптимизации, генерации идей, постановке задач.</p>
             </div>
+
             <div class="clearfix visible-sm"></div>
+
             <div class="col-md-4 col-sm-6">
               <h3>Купиотпуск <small>2011-2012</small></h3>
               <p>Первый опыт работы в большой команде. Дела с самого начала пошли очень хорошо. Познакомился с SVN, Redmine. Работал с платежными системами, сервисами email рассылок и в целом поддерживал сайт.</p>
             </div>
+
             <div class="clearfix visible-md visible-lg"></div>
+
             <div class="col-md-4 col-sm-6">
               <h3>Brandbox Creative <small>2010-2011</small></h3>
               <p>Работа была похожа на конвейер. Сайты-визитки, корпоративные порталы и т.п. Не только программировал, иногда и дизайн рисовал. Больше всего мне понравилось на этом месте работы то, что я общался непосредственно с клиентами, заказчиками, изучал этот бизнес.</p>
             </div>
+
             <div class="clearfix visible-sm"></div>
+
             <div class="col-md-4 col-sm-6">
               <h3>Comnet ISP <small>2009-2010</small></h3>
               <p>Мой первый опыт разработки за деньги. В основном делал небольшие корпоративные сайты. Провайдеру необходимо было создать музыкальный портал. Я придумал этот проект, описал то, каким он должен быть. В дальнейшем помогал в его разработке и наполнял контентом.</p>
             </div>
+
           </div>
       </div>
       <!-- /Experience -->
@@ -119,6 +130,55 @@
         </div>
       </div>
       <!-- /Skills -->
+
+      <!-- Contacts -->
+      <div class="section" id="contacts">
+        <h2 class="text-center">Контакты</h2>
+        <div class="row">
+          <div class="col-md-6">
+            <p>&nbsp;</p>
+            <div class="social">
+              <a href="skype:redfield1990"><i class="icon-skype icon-3x"></i></a>
+              <a href="mailto:i@skurid.in"><i class="icon-envelope icon-3x"></i></a>
+              <a href="http://www.linkedin.com/in/redfield1990"><i class="icon-linkedin-sign icon-3x"></i></a>
+              <a href="https://github.com/skuridin"><i class="icon-github icon-3x"></i></a>
+              <a href="https://trello.com/redfield_ru"><i class="icon-trello icon-3x"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <p>&nbsp;</p>
+            <form>
+              <div class="row">
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Имя">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Email">
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="form-group">
+                    <textarea class="form-control" rows="5" placeholder="Сообщение"></textarea>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="form-group">
+                    <button type="button" class="btn btn-primary col-xs-12">Отправить</button>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <!-- /Contacts -->
 
     </div>
 
