--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand" title="Евгений Скуридин">Евгений Скуридин</a>
+          <a href="/" class="navbar-brand" title="Евгений Скуридин">Евгений Скуридин</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -64,8 +64,8 @@
             <img class="img-thumbnail" src="img/i.jpg" alt="Суровый">
           </div>
           <div class="col-md-10 bio">
-            <p>Меня зовут Женя, мне 23 года и я backend-программист, хотя и frontend люблю. Разрабатываю проекты с помощью <strong>PHP</strong>, <strong>MYSQL</strong>, <strong>Yii</strong> и т.д. и т.п. Еще мне очень сильно нравятся Ruby, NODE.JS и MongoDB. В дальнейшем хотел бы перейти на них в качестве основных инструментов разработки.</p>
-            <p>Родился в Узбекистане. Работаю в сфере интернет разработок с 2009 года. Весной 2012 года переехал в Москву, чтобы трудиться над стартапом flatora.ru. Есть желание изучить Ruby, Node.js и MongoDB. Люблю точность, новые технологии, упрощать и автоматизировать.</p>
+            <p>Меня зовут Женя, мне 23 года и я <strong>web-разработчик</strong>. Пишу на <strong>PHP</strong>, использую <strong>MYSQL</strong>, <strong>Yii</strong>, <strong>Laravel</strong>, <strong>GruntJs</strong> и т.д. и т.п. Еще мне очень сильно нравятся Ruby, NODE.JS и MongoDB. В дальнейшем хотел бы перейти на них в качестве основных инструментов разработки.</p>
+            <p>Родился в Узбекистане. Пишу код с 2009 года. Весной 2012 года переехал в Москву, чтобы трудиться над стартапом flatora.ru, позже перебрался в Екатеринбург. Люблю точность, новые технологии, упрощать и автоматизировать.</p>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
 
             <div class="col-md-4 col-sm-6">
               <h3>Vault Couture <small>2013...</small></h3>
-              <p>Пока еще ничего не могу сказать, так как начал работать совсем недавно.</p>
+              <p>Расскажу, если поменяю место работы.</p>
             </div>
 
             <div class="col-md-4 col-sm-6">
@@ -158,6 +158,8 @@
         <div class="row">
           <div class="col-md-6">
             <p>&nbsp;</p>
+            <p>Copyright © Yevgeny Skuridin</p>
+            <p>Нашли ошибку? Пожалуйста сообщите об этом в <a href="https://github.com/skuridin/skuridin.github.io/issues">GitHub</a></p>
             <div class="social">
               <a href="skype:redfield1990"><i class="icon-skype icon-3x"></i></a>
               <a href="mailto:i@skurid.in"><i class="icon-envelope icon-3x"></i></a>
