--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Евгений Скуридин | Web-разработчик</title>
     <meta name="description" content="Web-разработчик. Использую PHP, MYSQL, Yii. Работал во Flatora, КупиОтпуск, Vault Couture">
     <meta name="keywords" content="разработка, web, php, mysql, yii, laravel, gruntjs, angularjs, flatora, купиотпуск, vault couture">
+    <meta name="author" content="Евгений Скуридин">
+    <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
