--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">YS</div>
+        <img src="img/logo.svg" alt="Yevgeny Skuridin" class="logo">
         <div class="about">
             <p>
                 Я Женя, web-разработчик. <br>
