--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
             <p>
                 Я Женя, web-разработчик. <br>
                 Код пишу на PHP и Ruby. <br>
-                Ташкент, Узбекистан.
+                Ташкент, Узбекистан. <br>
+                Готов к переезду.
             </p>
         </div>
         <ul class="links">
