--- a/src/template.html
+++ b/src/template.html
@@ -13,14 +13,21 @@
     {% } %}
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <div class="photo pull-left"></div>
-        <div class="main-info pull-right">
-          <h1>Evgeniy Skuridin</h1>
-          <p>Frontend developer</p>
-          <p class="text-muted">Tashkent, Uzbekistan (UTC+5)</p>
-          <p><a href="mailto:i@skurid.in">i@skurid.in</a></p>
+    <div class="wrapper-table">
+      <div class="wrapper-cell">
+        <div class="logo"></div>
+        <div class="info">
+          <p>
+            Hi! My name is Evgeniy. <br>
+            Frontend developer. <br>
+            Tashkent, Uzbekistan. <br>
+            Ready to relocate.
+          </p>
+        </div>
+        <div class="links">
+          <a href="https://github.com/skuridin">Github</a> &#9679;
+          <a href="mailto:i@skurid.in">Email</a> &#9679;
+          <a href="skype:redfield1990?chat">Skype</a>
         </div>
       </div>
     </div>
