--- a/src/template.html
+++ b/src/template.html
@@ -4,33 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{%=o.htmlWebpackPlugin.options.title%}</title>
+    <title>{%=o.htmlWebpackPlugin.options.title || 'Webpack App'%}</title>
     {% if (o.htmlWebpackPlugin.files.favicon) { %}
     <link rel="shortcut icon" href="{%=o.htmlWebpackPlugin.files.favicon%}">
     {% } %}
-    <link href="http://fonts.googleapis.com/css?family=Exo+2:300" rel="stylesheet">
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
   </head>
   <body>
-    <div class="wrapper-table">
-      <div class="wrapper-cell">
-        <svg class="logo" width="64" height="64" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title>Artboard 1</title><g fill="none" fill-rule="evenodd"><circle fill="#E96945" cx="256" cy="256" r="256"/><path d="M257.613 308.264c-2.84 2.85-6.21 5.876-10.11 9.08-5.375 4.416-11.663 8.496-18.863 12.24-7.2 3.744-16.608 5.616-28.224 5.616s-21.696-2.592-30.24-7.776c-8.544-5.184-12.816-13.2-12.816-24.048 0-10.848 1.488-19.152 4.464-24.912 2.976-5.76 7.248-10.56 12.816-14.4 4.992 1.536 9.6 2.304 13.824 2.304 19.2 0 28.8-4.896 28.8-14.688 0-8.448-8.352-12.672-25.056-12.672-3.456 0-6.624.288-9.504.864-3.264-3.072-6-6.96-8.208-11.664s-3.312-8.784-3.312-12.24v-6.336c0-.768.096-1.536.288-2.304 12.48 9.216 25.92 13.824 40.32 13.824 14.4 0 26.016-3.456 34.848-10.368 8.832-6.912 13.248-15.456 13.248-25.632 0-6.72-1.344-12.384-4.032-16.992-7.296-12.288-21.984-18.432-44.064-18.432s-41.28 4.992-57.6 14.976c-2.688-1.536-5.28-3.552-7.776-6.048-2.496-2.496-5.712-5.808-9.648-9.936s-7.248-6.192-9.936-6.192c-3.84 0-5.76 2.688-5.76 8.064 0 3.072 1.488 7.584 4.464 13.536 2.976 5.952 6.864 11.616 11.664 16.992-5.184 8.064-7.776 16.8-7.776 26.208 0 19.776 7.008 34.56 21.024 44.352-27.456 10.944-41.184 30.144-41.184 57.6 0 10.56 1.92 19.584 5.76 27.072 10.944 21.312 34.848 31.968 71.712 31.968 23.616 0 43.92-5.808 60.912-17.424 5.682-3.885 10.415-7.98 14.197-12.282 3.024 7.043 7.556 13.01 13.595 17.898 10.368 8.64 24.96 12.96 43.776 12.96 8.832 0 18.336-1.632 28.512-4.896 10.176-3.264 19.344-7.92 27.504-13.968s14.784-13.488 19.872-22.32c5.088-8.832 7.632-18.72 7.632-29.664 0-15.744-4.224-29.28-12.672-40.608-3.84-4.992-8.064-9.6-12.672-13.824-4.8-4.224-9.6-8.352-14.4-12.384 10.56-1.728 19.056-6.144 25.488-13.248 6.432-7.104 9.648-15.456 9.648-25.056 0-14.592-4.224-25.536-12.672-32.832-8.448-7.296-19.872-10.944-34.272-10.944-14.4 0-27.168 4.8-38.304 14.4-11.136 9.6-16.704 23.28-16.704 41.04 0 17.76 9.696 34.896 29.088 51.408 11.712 9.984 19.968 19.104 24.768 27.36 2.88 5.184 4.32 10.8 4.32 16.848 0 6.048-.96 10.992-2.88 14.832-5.376 10.752-15.84 16.128-31.392 16.128-14.208 0-21.312-8.352-21.312-25.056 0-7.296.96-13.968 2.88-20.016 1.92-6.048 2.88-12.144 2.88-18.288 0-4.224-3.456-6.336-10.368-6.336-8.832 0-17.184 5.664-25.056 16.992-6.583 9.473-10.413 19.214-11.49 29.224zM227.92 189.472c0-7.488-6.144-11.232-18.432-11.232-12.288 0-22.176 3.744-29.664 11.232 10.368 6.336 20.976 9.504 31.824 9.504 10.848 0 16.272-3.168 16.272-9.504zm126.72 35.424c10.944-10.944 16.416-22.368 16.416-34.272 0-3.648-1.92-6.72-5.76-9.216-4.224-2.304-8.64-3.456-13.248-3.456-10.368 0-17.856 3.36-22.464 10.08 2.304 8.256 5.712 15.264 10.224 21.024 4.512 5.76 9.456 11.04 14.832 15.84z" fill="#FFF"/></g></svg>
-        <div class="info">
-          <p>
-            Hi! My name is Evgeniy. <br>
-            Frontend developer. <br>
-            Tashkent, Uzbekistan. <br>
-            Ready to relocate.
-          </p>
-        </div>
-        <div class="links">
-          <a href="https://github.com/skuridin">Github</a> &#9679;
-          <a href="mailto:i@skurid.in">Email</a> &#9679;
-          <a href="skype:redfield1990?chat">Skype</a>
-        </div>
-      </div>
-    </div>
+    <div id="app"></div>
+    {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
+    <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
+    {% } %}
   </body>
 </html>
