Render to string

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
     <link href='http://fonts.googleapis.com/css?family=Exo+2:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">{react}</div>
     {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
     <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
     {% } %}
