--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
     {% for (var css in o.htmlWebpackPlugin.files.css) { %}
     <link href="{%=o.htmlWebpackPlugin.files.css[css] %}" rel="stylesheet">
     {% } %}
-    <link href='http://fonts.googleapis.com/css?family=Exo+2:300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Exo+2:300' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app">{react}</div>
