--- a/src/template.html
+++ b/src/template.html
@@ -14,9 +14,6 @@
     <link href='//fonts.googleapis.com/css?family=Exo+2:300,500' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id="app"></div>
-    {% for (var chunk in o.htmlWebpackPlugin.files.chunks) { %}
-    <script src="{%=o.htmlWebpackPlugin.files.chunks[chunk].entry %}"></script>
-    {% } %}
+    <div id="app">{{{content}}}</div>
   </body>
 </html>
