Add link to blog

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
           </section>
           <section class="links">
             <a href="Evgeniy.Skuridin.Frontend.pdf" class="links__item">CV</a>
+            <a href="https://blog.skurid.in/" class="links__item">Blog</a>
             <a href="https://github.com/skuridin" class="links__item">Github</a>
             <a href="mailto:i@skurid.in" class="links__item">Email</a>
             <a href="skype:redfield1990?add" class="links__item">Skype</a>
