--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Evgeniy Skuridin — Front-end Developer</title><link href="style.css" rel="stylesheet"></head><body><div class="wrapper"><div class="wrapper-cell"><div class="wrapper-content"><main class="home-page"><img class="logo" src="logo.png" alt="ES"><section class="about-me">Hi! My name is Evgeniy<br>Front-end developer<br>Tashkent, Uzbekistan<br>Ready to relocate</section><section class="links"><a href="Evgeniy.Skuridin.Frontend.pdf" class="links__item">CV</a> <a href="https://blog.skurid.in/" class="links__item">Blog</a> <a href="https://github.com/skuridin" class="links__item">Github</a> <a href="mailto:i@skurid.in" class="links__item">Email</a> <a href="skype:redfield1990?add" class="links__item">Skype</a></section></main></div></div></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="My name is Evgeniy. Frontend developer at Impraise.com. React + redux. Amsterdam, Netherlands.">
+    <title>Evgeniy Skuridin — Frontend developer</title>
+    <style>
+      html {
+        height: 100%;
+      }
+      body {
+        -webkit-font-smoothing: antialiased;
+        font-family: Menlo, monospace;
+        font-size: 16px;
+        line-height: 1.5;
+        color: #555;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      a {
+        color: #5ad;
+        text-decoration: none;
+        display: inline-block;
+      }
+
+      a:hover {
+        text-decoration: underline;
+      }
+
+      a:active {
+        transform: translate(1px, 1px);
+      }
+
+      span {
+        opacity: .5;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      Hey, my name is Evgeniy<br/>
+      Frontend developer at <a href="http://www.impraise.com/">Impraise</a><br/>
+      React + Redux<br/>
+      Amsterdam, Netherlands<br/>
+      <span>---</span><br/>
+      <a href="">Github</a>,
+      <a href="">Email</a>,
+      <a href="https://nl.linkedin.com/in/redfield1990">LinkedIn</a>
+    </div>
+  </body>
+</html>
