Add correct links

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       React + Redux<br/>
       Amsterdam, Netherlands<br/>
       <span>---</span><br/>
-      <a href="">Github</a>,
-      <a href="">Email</a>,
-      <a href="https://nl.linkedin.com/in/redfield1990">LinkedIn</a>
+      <a href="https://github.com/skuridin">Github</a>,
+      <a href="mailto:i@skurid.in">Email</a>,
+      <a href="https://linkedin.com/in/redfield1990">LinkedIn</a>
     </div>
   </body>
 </html>
