--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         height: 100%;
       }
       body {
+        margin: 0;
         -webkit-font-smoothing: antialiased;
         font-family: Menlo, monospace;
         font-size: 16px;
@@ -34,6 +35,10 @@
 
       a:active {
         transform: translate(1px, 1px);
+      }
+
+      div {
+        padding-bottom: 5em;
       }
 
       span {
