--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <body>
     <div>
       Hey, my name is Evgeniy<br/>
-      Frontend developer at <a href="http://www.impraise.com/">Impraise</a><br/>
-      React + Redux<br/>
+      Frontend developer <a href="http://www.impraise.com/">@impraise</a><br/>
+      React, Redux, GraphQL<br/>
       Amsterdam, Netherlands<br/>
       <span>---</span><br/>
       <a href="https://github.com/skuridin">Github</a>,
