--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="My name is Evgeniy. Frontend developer at Impraise.com. React + redux. Amsterdam, Netherlands.">
+    <meta name="description" content="My name is Evgeniy. Frontend developer at Albert Heijn. React + GraphQL. Amsterdam, Netherlands.">
     <title>Evgeniy Skuridin — Frontend developer</title>
     <style>
       html {
