feat: use eugene instead of evgeniy

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Evgeniy Skuridin — Frontend developer located in the Netherlands">
+    <meta name="description" content="Eugene Skuridin — Frontend developer located in the Netherlands">
     <meta http-equiv="refresh" content="0; URL=https://skurid.in/" />
-    <title>Evgeniy Skuridin — Frontend developer</title>
+    <title>Eugene Skuridin — Frontend developer</title>
     <style>
       html {
         height: 100%;
@@ -49,7 +49,7 @@
   </head>
   <body>
     <div>
-      Hey, my name is Evgeniy,<br/>
+      Hey, my name is Eugene,<br/>
       Frontend developer.<br/>
       React, GraphQL<br/>
       Amsterdam, Netherlands<br/>
