feat(site): update profile title, description, and skills to reflect software engineer role

--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
                     scaleY(var(--tw-scale-y, 1));
             }
         </style>
-        <title>Eugene Skuridin — Frontend Developer</title>
+        <title>Eugene Skuridin — Software Engineer</title>
         <meta
             name="description"
-            content="Eugene Skuridin — Frontend developer located in the Netherlands. GraphQL, React, TypeScript"
+            content="Eugene Skuridin — Software Engineer located in the Netherlands. React, TypeScript, AI tools, Coding agents."
         />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     </head>
@@ -357,7 +357,7 @@
                     class="text-3xl bg-clip-text text-transparent bg-gradient-to-br from-red-600 to-blue-600 bg-right transition-all duration-500 hover:bg-left"
                     style="background-size: 400%"
                 >
-                    Hi, <br />I'm Eugene, <br />Frontend Developer <br />Based
+                    Hi, <br />I'm Eugene, <br />Software Engineer <br />Based
                     in the Netherlands
                 </h1>
                 <ul
@@ -367,17 +367,22 @@
                     <li
                         class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
                     >
-                        GraphQL
-                    </li>
-                    <li
-                        class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
-                    >
                         React
                     </li>
                     <li
                         class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
                     >
                         TypeScript
+                    </li>
+                    <li
+                        class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
+                    >
+                        AI tools
+                    </li>
+                    <li
+                        class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
+                    >
+                        Coding agents
                     </li>
                 </ul>
                 <a
