feat(site): update meta description and skills to include GraphQL and LLM

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         <title>Eugene Skuridin — Software Engineer</title>
         <meta
             name="description"
-            content="Eugene Skuridin — Software Engineer located in the Netherlands. React, TypeScript, AI tools, Coding agents."
+            content="Eugene Skuridin — Software Engineer located in the Netherlands. React, TypeScript, GraphQL, AI, LLM"
         />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     </head>
@@ -377,12 +377,7 @@
                     <li
                         class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
                     >
-                        AI tools
-                    </li>
-                    <li
-                        class="inline-flex rounded-full px-2 h-6 border items-center text-xs"
-                    >
-                        Coding agents
+                        GraphQL
                     </li>
                 </ul>
                 <a
